# docs/swagger.json
@@ -10,45 +10,6 @@
     "basePath": "/api",
     "paths": {
         "/projects": {
-            "get": {
-                "description": "Get a list of all projects associated with the logged-in user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Projects"
-                ],
-                "summary": "List all projects",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/handlers.GetProject"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create a new project",
                 "consumes": [
@@ -99,7 +60,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/projects/delete": {
             "delete": {
                 "description": "Delete a project by ID",
                 "consumes": [
@@ -150,56 +113,7 @@
                 }
             }
         },
-        "/projects/{id}": {
-            "get": {
-                "description": "Get a project by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Projects"
-                ],
-                "summary": "Get a project by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Project ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.GetProject"
-                        }
-                    },
-                    "404": {
-                        "description": "No project found with the project ID",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
+        "/projects/edit": {
             "put": {
                 "description": "Update a project by its ID",
                 "consumes": [
@@ -259,9 +173,9 @@
                 }
             }
         },
-        "/sprints": {
+        "/projects/get": {
             "get": {
-                "description": "Lists down all sprints associated with the logged-in user",
+                "description": "Get a project by its ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -269,9 +183,60 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Sprints"
+                    "Projects"
                 ],
-                "summary": "List all sprints",
+                "summary": "Get a project by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.GetProject"
+                        }
+                    },
+                    "404": {
+                        "description": "No project found with the project ID",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/projects/list": {
+            "get": {
+                "description": "Get a list of all projects associated with the logged-in user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "List all projects",
                 "parameters": [
                     {
                         "type": "string",
@@ -287,7 +252,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.GetSprint"
+                                "$ref": "#/definitions/handlers.GetProject"
                             }
                         }
                     },
@@ -298,7 +263,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/sprints": {
             "post": {
                 "description": "Create a new sprint for a project",
                 "consumes": [
@@ -349,7 +316,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/sprints/delete": {
             "delete": {
                 "description": "Delete a sprint by its ID",
                 "consumes": [
@@ -406,53 +375,7 @@
                 }
             }
         },
-        "/sprints/{id}": {
-            "get": {
-                "description": "Get a sprint by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Sprints"
-                ],
-                "summary": "Get a sprint by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Sprint ID",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/handlers.GetSprint"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
+        "/sprints/edit": {
             "put": {
                 "description": "Edit a sprint by its ID",
                 "consumes": [
@@ -512,9 +435,9 @@
                 }
             }
         },
-        "/tasks": {
+        "/sprints/get": {
             "get": {
-                "description": "Get all tasks for the logged-in user",
+                "description": "Get a sprint by its ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -522,51 +445,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Tasks"
+                    "Sprints"
                 ],
-                "summary": "Get tasks",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Fetch tasks",
-                        "schema": {
-                            "$ref": "#/definitions/common.Task"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update a task with the provided details",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Tasks"
-                ],
-                "summary": "Edit Task",
+                "summary": "Get a sprint by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -577,7 +458,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Task ID",
+                        "description": "Sprint ID",
                         "name": "id",
                         "in": "query",
                         "required": true
@@ -585,15 +466,12 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Tasks updated successfully",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.GetSprint"
+                            }
                         }
                     },
                     "500": {
@@ -603,7 +481,50 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/sprints/list": {
+            "get": {
+                "description": "Lists down all sprints associated with the logged-in user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sprints"
+                ],
+                "summary": "List all sprints",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.GetSprint"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks": {
             "post": {
                 "description": "Create a new task for the logged-in user",
                 "consumes": [
@@ -715,7 +636,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/tasks/delete": {
             "delete": {
                 "description": "Delete a task for the logged-in user",
                 "consumes": [
@@ -759,6 +682,101 @@
                     },
                     "404": {
                         "description": "Task not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/edit": {
+            "put": {
+                "description": "Update a task with the provided details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "Edit Task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Tasks updated successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/get": {
+            "get": {
+                "description": "Get all tasks for the logged-in user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "Get tasks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Fetch tasks",
+                        "schema": {
+                            "$ref": "#/definitions/common.Task"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "string"
                         }
